force-app/main/default/objects/FS_Association_Brandset__c/FS_Association_Brandset__c.object-meta.xml
<CustomObject>
    <label>Default Brandset</label>
    <nameField>
        <displayFormat>AB-{00000}</displayFormat>
        <label>Account Brandset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Default Brandsets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>