force-app/main/default/objects/FS_Association_Brandset__c/fields/Brandset_Name__c.field-meta.xml
<CustomField>
    <fullName>Brandset_Name__c</fullName>
    <formula>FS_Brandset__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brandset Name</label>
    <type>Text</type>
</CustomField>