force-app/main/default/objects/FS_Association_Brandset__c/fields/FS_Brand_Status__c.field-meta.xml
<CustomField>
    <fullName>FS_Brand_Status__c</fullName>
    <description>Brand Status</description>
    <formula>if( AND(FS_Brandset__c&lt;&gt;&#39;&#39;,TEXT(FS_NonBranded_Water__c) &lt;&gt;&#39;&#39;),&#39;Complete&#39;, 
if(OR(FS_Brandset__c&lt;&gt;&#39;&#39;,TEXT(FS_NonBranded_Water__c) &lt;&gt;&#39;&#39;),&#39;In Progress&#39;,&#39;Not Started&#39;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brand Status</label>
    <type>Text</type>
</CustomField>