force-app/main/default/objects/FS_Association_Brandset__c/fields/FS_Brandset__c.field-meta.xml
<CustomField>
    <fullName>FS_Brandset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brandset</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Selected Brandset is not available for commercial use</errorMessage>
        <filterItems>
            <field>FS_Brandset__c.FS_Platform_Applicable__c</field>
            <operation>contains</operation>
            <valueField>$Source.FS_Platform__c</valueField>
        </filterItems>
        <filterItems>
            <field>FS_Brandset__c.Available_for_Selection__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FS_Brandset__c</referenceTo>
    <relationshipLabel>Default Brandsets</relationshipLabel>
    <relationshipName>Brandsets</relationshipName>
    <type>Lookup</type>
</CustomField>