force-app/main/default/objects/FS_Association_Brandset__c/fields/FS_Brandset_Desc__c.field-meta.xml
<CustomField>
    <fullName>FS_Brandset_Desc__c</fullName>
    <formula>FS_Brandset__r.FS_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brandset Desc</label>
    <type>Text</type>
</CustomField>