force-app/main/default/objects/FS_Association_Brandset__c/fields/FS_Brandset_Number__c.field-meta.xml
<CustomField>
    <fullName>FS_Brandset_Number__c</fullName>
    <formula>FS_Brandset__r.FS_Brandset_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brandset#</label>
    <type>Text</type>
</CustomField>