force-app/main/default/objects/FS_Association_Brandset__c/fields/FS_Commercial_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Commercial_Start_Date__c</fullName>
    <formula>FS_Brandset__r.FS_Effective_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commercial Start Date</label>
    <type>Date</type>
</CustomField>