force-app/main/default/objects/FS_Association_Brandset__c/fields/FS_Country__c.field-meta.xml
<CustomField>
    <fullName>FS_Country__c</fullName>
    <formula>IF( FS_Headquarters__c!=null ,FS_Headquarters__r.ShippingCountry ,
IF(FS_Installation__c!=null  , FS_Installation__r.FS_Outlet__r.ShippingCountry ,
IF(FS_Outlet_Dispenser__c!=null,FS_Outlet_Dispenser__r.Outlet_Country__c,&#39;&#39;)))</formula>
    <label>Country</label>
    <type>Text</type>
</CustomField>