force-app/main/default/objects/FS_Association_Brandset__c/fields/FS_CreatedBy__c.field-meta.xml
<CustomField>
    <fullName>FS_CreatedBy__c</fullName>
    <formula>FS_Brandset__r.CreatedBy.FirstName + &#39; &#39; + FS_Brandset__r.CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreatedBy</label>
    <type>Text</type>
</CustomField>