force-app/main/default/objects/FS_Association_Brandset__c/fields/FS_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>FS_CreatedDate__c</fullName>
    <formula>DATEVALUE(CreatedDate)</formula>
    <label>CreatedDate</label>
    <type>Date</type>
</CustomField>