force-app/main/default/objects/FS_Association_Brandset__c/fields/FS_Dispenser_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>FS_Dispenser_Serial_Number__c</fullName>
    <formula>FS_Outlet_Dispenser__r.FS_Serial_Number2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dispenser Serial Number</label>
    <type>Text</type>
</CustomField>