force-app/main/default/objects/FS_Association_Brandset__c/fields/FS_Headquarters__c.field-meta.xml
<CustomField>
    <fullName>FS_Headquarters__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Headquarters</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>FS Headquarters</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Default Brandset</relationshipLabel>
    <relationshipName>FSHeadquarters</relationshipName>
    <type>Lookup</type>
</CustomField>