force-app/main/default/objects/FS_Association_Brandset__c/fields/FS_Installation__c.field-meta.xml
<CustomField>
    <fullName>FS_Installation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installation Plan</label>
    <referenceTo>FS_Installation__c</referenceTo>
    <relationshipLabel>Selected Brandsets</relationshipLabel>
    <relationshipName>Account_Brandsets</relationshipName>
    <type>Lookup</type>
</CustomField>