force-app/main/default/objects/FS_Association_Brandset__c/fields/FS_IP_RecordType__c.field-meta.xml
<CustomField>
    <fullName>FS_IP_RecordType__c</fullName>
    <formula>FS_Installation__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installation Record Type</label>
    <type>Text</type>
</CustomField>