force-app/main/default/objects/FS_Association_Brandset__c/fields/FS_IP_Status__c.field-meta.xml
<CustomField>
    <fullName>FS_IP_Status__c</fullName>
    <formula>FS_Installation__r.FS_Installation_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installation Plan Status</label>
    <type>Text</type>
</CustomField>