force-app/main/default/objects/FS_Association_Brandset__c/fields/FS_LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>FS_LastModifiedDate__c</fullName>
    <formula>FS_Brandset__r.LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LastModifiedDate</label>
    <type>Date</type>
</CustomField>