force-app/main/default/objects/FS_Association_Brandset__c/fields/FS_NonBranded_Water__c.field-meta.xml
<CustomField>
    <fullName>FS_NonBranded_Water__c</fullName>
    <description>NonBranded Water</description>
    <label>NonBranded Water</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hide</fullName>
            </value>
            <value>
                <fullName>Show</fullName>
                <default>true</default>
                <label>Show</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>