force-app/main/default/objects/FS_Association_Brandset__c/fields/FS_Outlet_Dispenser__c.field-meta.xml
<CustomField>
    <fullName>FS_Outlet_Dispenser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outlet Dispenser</label>
    <referenceTo>FS_Outlet_Dispenser__c</referenceTo>
    <relationshipLabel>Brandset Details (Current)</relationshipLabel>
    <relationshipName>OutletDispensers</relationshipName>
    <type>Lookup</type>
</CustomField>