force-app/main/default/objects/FS_Association_Brandset__c/fields/FS_Platforms__c.field-meta.xml
<CustomField>
    <fullName>FS_Platforms__c</fullName>
    <label>Platforms</label>
    <length>80</length>
    <type>Text</type>
</CustomField>