force-app/main/default/objects/FS_Association_Brandset__c/fields/FS_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>FS_Record_ID__c</fullName>
    <label>Record ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>