force-app/main/default/objects/FS_Association_Brandset__c/fields/FS_Related_Object_type__c.field-meta.xml
<CustomField>
    <fullName>FS_Related_Object_type__c</fullName>
    <formula>IF(FS_Headquarters__c!=null, &#39;HQ&#39;, IF(FS_Installation__c!=null,&#39;Installation&#39;,IF(FS_Outlet_Dispenser__c!=null,&#39;Outlet Dispenser&#39;,&#39;&#39;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Object type</label>
    <type>Text</type>
</CustomField>