force-app/main/default/objects/FS_Association_Brandset__c/fields/SAP_Item_Proposal_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Item_Proposal_Number__c</fullName>
    <formula>FS_Brandset__r.FS_SAP_Item_Proposal_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP Proposal #</label>
    <type>Text</type>
</CustomField>