force-app/main/default/objects/FS_Association_Brandset__c/recordTypes/HQ_Association_Brandset.recordType-meta.xml
<RecordType>
    <fullName>HQ_Association_Brandset</fullName>
    <active>true</active>
    <label>HQ Association Brandset</label>
</RecordType>