force-app/main/default/objects/FS_Association_Brandset__c/recordTypes/IP_Association_Brandset.recordType-meta.xml
<RecordType>
    <fullName>IP_Association_Brandset</fullName>
    <active>true</active>
    <label>IP Association Brandset</label>
</RecordType>