force-app/main/default/objects/FS_Association_Brandset__c/recordTypes/OD_Association_Brandset.recordType-meta.xml
<RecordType>
    <fullName>OD_Association_Brandset</fullName>
    <active>true</active>
    <label>OD Association Brandset</label>
</RecordType>